--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-pwa-serwist-example",
+  "name": "offline-pwa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,10 @@
     "@serwist/sw": "^8.4.4",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "formik": "^2.4.6",
+    "sonner": "^1.7.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
